Nikola auto commit.
Source commit: 29e5deb5cd47c11e6d833dd793c5cc354c0d787f
Nikola version: 7.3.1

--- a/archive.html
+++ b/archive.html
@@ -102,7 +102,7 @@
         <!--End of body content-->
 
         <footer>
-            Contents © 2015         <a href="mailto:adward_r@icloud.com">Adward-R</a> - Powered by         <a href="http://getnikola.com" rel="nofollow">Nikola</a>         
+            Contents © 2015         <a href="mailto:adwardpeverell@gmail.com">Adward-R</a> - Powered by         <a href="http://getnikola.com" rel="nofollow">Nikola</a>         
             
         </footer>
     </div>
