Nikola auto commit.
Source commit: 09ef88dd50a86b708fca3eebb906641c2912d67d
Nikola version: 7.3.1

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 </ul>
 </li>
 </ul>
+<p><img alt="Alt Text" src="post3_img/img2.jpg"></p>
 <blockquote>
 <p>quotes</p>
 <p>quotes for second line</p>
