Nikola auto commit.
Source commit: 09ef88dd50a86b708fca3eebb906641c2912d67d
Nikola version: 7.3.1

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 <blockquote>
 <h3>U.S. Coding Website GitHub Hit With Cyberattack</h3>
 <h4>Security experts say attack is likely an attempt by China to shut down anticensorship tools</h4>
+</blockquote>
+<!-- TEASER_END -->
+
+<blockquote>
 <p>By <strong>Eva Dou</strong>
 <code>March 29, 2015 10:22 a.m. ET</code>
 <strong>BEIJING</strong> — A popular U.S. coding website is enduring an onslaught of Internet traffic meant for China’s most popular search engine, and security experts say the episode likely represents an attempt by China to shut down anticensorship tools.</p>
@@ -122,6 +126,8 @@
             <div class="body">
                 <div>
 <p>ISE 14.7是塞灵思开发的FPGA综合设计开发环境的最新、也是产品线上最后一个版本，之后转向其继承者——基于Eclipse构建的Vivaldo的开发。我从依然使用Thinkpad和Win7时便鼓捣过其10.1、12.4和14.6版本，迁移到OS X平台下后不得已换成Parallels Desktop 10 + Windows 8.1虚拟机方案来安装，期间遇到一些问题，随手整理一些Tips。</p>
+<!-- TEASER_END -->
+
 <h3>ISE拾零</h3>
 <ul>
 <li>ISE各个版本（10系列及之前的.ise时代除外）支持有限的向前兼容，即新版本可以打开旧版本的*.xise工程文件并作migration，但是被移植后的工程无法再用旧版本软件打开。当然，如果不嫌麻烦，重新建立工程、导入所有的source file也是可行的……</li>
@@ -228,6 +234,8 @@ Microsoft.VC80.DebugCRT.manifest
 <p>现今互联网上的云服务可谓是山头林立，然而其易用性和可靠性却大相径庭，因此深觉有必要作一番解说，并附上我的个人选择作为参考。这里讨论的是个人云服务，区别于购买VPS、云主机后自行架设的备份或者存储集群。</p>
 <p>以下提及的诸多国际化的云服务，许多都有可能因为隐私保护、监管难以涉及的问题在中国大陆范围遭到block，如果需要享受乃至依赖这些相对优质的服务，请自行寻找可靠的梯子。</p>
 <p><a href="https://db.tt/SFgA3uW8">我的Dropbox邀请链接</a>   不谢。</p>
+<!-- TEASER_END -->
+
 <h3>云服务是Safe-Guard而不是外接存储器</h3>
 <p>即便竞争激烈，现今国际市场上也少有免费容量50GB以上级别的个人云存储服务：Google Drive和OneDrive提供15GB，iCloud 5GB，而云服务界的翘楚Dropbox仅仅提供2G初始容量（通过绑定MailBox业务推广、分享给他人可以最多扩容到16GB的免费容量），与国内动不动就TB级别的大战形成鲜明对比。而实质上的逻辑则是，它们是完全不同类型的产品，在一起比较并不合适。国内真正应该和Dropbox之流比较的，是百度云同步盘、云诺和坚果云等，做的是同步备份的工作；而大名鼎鼎的百度云、360云盘、微盘等，本质上是扮演下载器、收藏夹和外接存储的角色。</p>
 <h3>一分价钱一分货</h3>
@@ -359,6 +367,8 @@ Microsoft.VC80.DebugCRT.manifest
 <p>Static websites are safer, use fewer resources, and avoid vendor and platform lock-in.</p>
 </blockquote>
 <p>相比较WordPress等功能完善强大、插件生态丰富的主流动态博客软件，静态博客软件的功能显得比较有限，但是胜在良好的平台迁移性、极快的渲染速度（根本就是提前渲染好的）以及很低的上手成本。Static Blog不需要配置Apache或者Nginx等服务器端软件来处理页面请求，而是使用Python构建的模拟服务器，serve已经预先渲染好的页面样式，因此响应速度非常令人满意，资源占用很低，环境配置也简化到了一定程度。对于不喜欢过分折腾者，这些特性应该足够使得静态博客软件成为首选。</p>
+<!-- TEASER_END -->
+
 <p>目前与Gitpages最紧密耦合的静态博客软件无疑是<a href="http://jekyllrb.com/">Jekyll</a>，样式非常漂亮，也比较方便使用。但是本人作孽尝试了一下传说中丝一般顺滑的<em>Nikola</em>，也还是比较满意的。另外<em>Hexo</em>的风评也还不错。</p>
 <p>本人机器的平台是Mac OSX Yosemite，如果你是Windows用户，可能会在以下教程的Python环境搭建部分多费周折，并且我不一定能帮得上忙……</p>
 <h3>使用Github Pages搭建个人博客</h3>
@@ -433,6 +443,8 @@ Microsoft.VC80.DebugCRT.manifest
 </ul>
 </li>
 </ul>
+<!-- TEASER_END -->
+
 <p><img alt="Alt Text" src="post3_img/img2.jpg"></p>
 <blockquote>
 <p>quotes</p>
