--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             </div>
             <div class="body">
                 <div>
+<h4>
+<a href="http://pan.baidu.com/s/1eQphktk">工具包</a> 密码: lqy8</h4>
 <p>原先买Moto G的时候除了缺一款支持电信的手机、对于本体性价比和做工还比较满意之外，一部分原因便是冲着其搭载的原生Android Lollipop 5.0.2系统。可曾想到手的ROM虽然被预装的软件很少（总共6款吧，我Root后也只卸了两款而已，摩托良心），但是阉割了Google Play Service框架和服务，显得空空荡荡；且国内市场能够找到的Service框架都不适配安卓5.0，导致需要GMS的谷歌系应用完全无法正常运行，非常苦恼。于是折腾了一下午终于成功将其改造为本来模样，并尽数获得权限。</p>
 <p>本文中所述手机型号为Motorola XT1077，若型号不符合，请自行对照各项参数，适用或者更改部分刷机用到的工具。建议照以下内容步骤操作之前，充分了解刷机的风险，比如解锁失去保修、刷错ROM手机变砖乃至Root后需要手动谨慎管理应用权限等。</p>
 <p>刷机环境为Mac OS X Yosemite。记得手机用USB连电脑要打开<strong>开发者模式-&gt;USB调试</strong>。</p>
