Nikola auto commit.
Source commit: b6405c51a7ae523ca9bfca8d332991db3a6a0ed6
Nikola version: 7.3.1

--- a/archive.html
+++ b/archive.html
@@ -51,6 +51,9 @@
     </header>
     <ul class="postlist">
         <li>
+<a href="2016/index.html">2016</a>
+        </li>
+<li>
 <a href="2015/index.html">2015</a>
     </li>
 </ul>
@@ -58,7 +61,7 @@
 
              
         <footer id="footer" role="contentinfo">
-            <p>Contents © 2015         <a href="mailto:adwardpeverell@gmail.com">Adward-R</a> - Powered by         <a href="http://getnikola.com" rel="nofollow">Nikola</a>         </p>
+            <p>Contents © 2016         <a href="mailto:adwardpeverell@gmail.com">Adward-R</a> - Powered by         <a href="http://getnikola.com" rel="nofollow">Nikola</a>         </p>
             
         </footer>
 
