--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             <div class="body">
                 <div>
 <h3>1. 作用域问题</h3>
+<h4>1）隐式全局变量声明</h4>
 <pre class="code literal-block"><span class="kd">function</span> <span class="nx">func1</span><span class="p">()</span> <span class="p">{</span>
     <span class="kd">var</span> <span class="nx">a1</span> <span class="o">=</span> <span class="nx">b1</span> <span class="o">=</span> <span class="mi">1</span><span class="p">;</span>
     <span class="k">return</span> <span class="nx">b1</span><span class="p">;</span>
